[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Icons/folder-open-line.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/save-3-line.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/file-line.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/folder-3-line.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/menu-line.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/refresh-line.png" type="Texture" id=6]
[ext_resource path="res://Assets/Scripts/main.gd" type="Script" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="."]
margin_right = 960.0
margin_bottom = 30.0
action_mode = 1
text = "Menu"
icon = ExtResource( 5 )
flat = false
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_top = 30.0
margin_right = 960.0
margin_bottom = 540.0
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="PopupMenu" parent="."]
margin_left = 5.5
margin_top = 26.5
margin_right = 205.5
margin_bottom = 216.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFileButton" type="Button" parent="Menu"]
margin_left = 50.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
text = "New File"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileButton" type="Button" parent="Menu"]
margin_left = 50.0
margin_top = 60.0
margin_right = 150.0
margin_bottom = 90.0
mouse_default_cursor_shape = 2
text = "Open File"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsButton" type="Button" parent="Menu"]
margin_left = 50.0
margin_top = 100.0
margin_right = 150.0
margin_bottom = 130.0
mouse_default_cursor_shape = 2
text = "Save As"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="Menu"]
margin_left = 50.0
margin_top = 140.0
margin_right = 150.0
margin_bottom = 170.0
mouse_default_cursor_shape = 2
text = "About"

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
custom_icons/folder = ExtResource( 4 )
custom_icons/reload = ExtResource( 6 )
custom_icons/file = ExtResource( 3 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/Users/Flexy_GG1/Documents"
current_file = "Documents"
current_path = "/Users/Flexy_GG1/Documents/Documents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsDialog" type="FileDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
custom_icons/folder = ExtResource( 4 )
custom_icons/reload = ExtResource( 6 )
custom_icons/file = ExtResource( 3 )
window_title = "Save As"
resizable = true
access = 2
show_hidden_files = true
current_dir = "/Users/Flexy_GG1/Documents"
current_file = "Untitled.txt"
current_path = "/Users/Flexy_GG1/Documents/Untitled.txt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="WindowDialog" parent="."]
visible = true
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="About"]
margin_top = 0.472473
margin_right = 480.0
margin_bottom = 270.472
text = "
 IE Code is a simple text editor developed by Ihsan Entertainment.
 Licensed under: Creative Commons BY SA
 GitHub: https://github.com/Ihsan-Entertainment/IE-Code"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GitHub" type="TextureButton" parent="About"]
margin_left = 54.0
margin_top = 42.0
margin_right = 369.0
margin_bottom = 62.0
mouse_default_cursor_shape = 2

[node name="GodotEngine" type="Button" parent="About"]
margin_left = 3.0
margin_top = 88.0
margin_right = 168.0
margin_bottom = 106.0
mouse_default_cursor_shape = 2
text = "Powered by Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotEngine" type="WindowDialog" parent="."]
margin_left = 240.0
margin_top = 135.0
margin_right = 720.0
margin_bottom = 405.0
window_title = "Powered By Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="GodotEngine"]
margin_top = 0.472473
margin_right = 480.0
margin_bottom = 270.472
text = "This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Menu/NewFileButton" to="." method="_on_NewFileButton_pressed"]
[connection signal="pressed" from="Menu/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="Menu/SaveAsButton" to="." method="_on_SaveAsButton_pressed"]
[connection signal="pressed" from="Menu/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveAsDialog" to="." method="_on_SaveAsDialog_file_selected"]
[connection signal="pressed" from="About/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="About/GodotEngine" to="." method="_on_GodotEngine_pressed"]
